--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World Azure Template</title>
+<title>Web Dice Roller</title>
+<link rel = "stylesheet" href ="styles.css">
 </head>
-<body>
-<h1>Azure Static Website Template</h1>
-<p>This page is a sample page for a “Hello World” Azure Static Website Template. The page contains an HTML validation warning. 
-Can you find and fix that warning? What about the curly quotes? Do they current work in all browsers? Can you fix the curly 
-quotes also? And what about proper indenting?</p>
+<body onload="rollDice()">
+
+    <h1>LUDO DICE</h1>
+
+    <div class="instructions">
+        <h3> How to Play</h3>
+        <p> You need a 6 to move out of a camp! Roll the dice to start.</p>
+    
+
+    <p>Click the button to roll.</p>
+</div>
+
+<div class="dice-box">
+    <h2> Your roll:</h2>
+    <input type="number" id ="diceResult" class="dice-result" readonly>
+    <p id="message"></p>
+</div>
+
+<button id="rollButton" autofocus> Roll Dice 🎲</button>
+
+<div class="history">
+    <h3> Last 3 Rolls:</h3>
+    <p id=""rollHistory"></p>
+</div>
+
+<script src="script.js"></script>
+
 </body>
 </html>
